Immage added to webpage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1>
             Grant Stafford-Renard's Homepage
         </h1>
-        
+        <p>
+            <img src="Photos/elden_ring.webp" alt="Elden Ring">
+        </p>
     </body>
 </html>
