Message about photo

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
         <p>
             <img src="Photos/elden_ring.webp" alt="Elden Ring">
         </p>
+        <h4>
+            One of my favorite games
+        </h4>
+        <p>
+            <b>Seriously</b>
+        </p>
     </body>
 </html>
