Elden ring table

--- a/index.html
+++ b/index.html
@@ -19,5 +19,60 @@
         <p>
             <b>Seriously</b>
         </p>
+        <table class="source" style="width: 400px;">
+            <tbody>
+                <tr>
+                    <td>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <th colspan="2">Awards nominations and winnings</th>
+                                </tr>
+                                <tr>
+                                    <th>Award</th>
+                                    <th>Status</th>
+                                </tr>
+                                <tr>
+                                    <th>Audio design 2022</th>
+                                    <th>Nominee</th>
+                                </tr>
+                                <tr>
+                                    <th>Naritive 2022</th>
+                                    <th>Nominee</th>
+                                </tr>
+                                <tr>
+                                    <th>Score/Soundtrack 2022</th>
+                                    <th>Nominee</th>
+                                </tr>
+                                <tr>
+                                    <th>Anticipated game 2020</th>
+                                    <th>Winner</th>
+                                </tr>
+                                <tr>
+                                    <th>Anticipated game 2021</th>
+                                    <th>Winner</th>
+                                </tr>
+                                <tr>
+                                    <th>Studio/Game direction 2022</th>
+                                    <th>Winner</th>
+                                </tr>
+                                <tr>
+                                    <th>Art direction 2022</th>
+                                    <th>Winner</th>
+                                </tr>
+                                <tr>
+                                    <th>Role playing game 2022</th>
+                                    <th>Winner</th>
+                                </tr>
+                                <tr>
+                                    <th>Game of the year 2022</th>
+                                    <th>Winner</th>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
