Fixed immage size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             Grant Stafford-Renard's Homepage
         </h1>
         <p>
-            <img src="Photos/elden_ring.webp" alt="Elden Ring">
+            <img src="Photos/elden_ring.webp" alt="Elden Ring"
+            width="1200"
+            height="900">
         </p>
         <h4>
             One of my favorite games
@@ -19,7 +21,7 @@
         <p>
             <b>Seriously</b>
         </p>
-        <table class="source" style="width: 400px;">
+        <table class="source" style="width: 1200px;">
             <tbody>
                 <tr>
                     <td>
