Elden ring external links

--- a/index.html
+++ b/index.html
@@ -76,5 +76,11 @@
                 </tr>
             </tbody>
         </table>
+        <p>
+            You can find Elden Ring's official website
+            <a href="https://en.bandainamcoent.eu/elden-ring/elden-ring">here,</a>
+            and you can buy it
+            <a href="https://store.steampowered.com/agecheck/app/1245620/">here.</a>
+        </p>
     </body>
 </html>
