--- a/HeadFirstLounge/index.html
+++ b/HeadFirstLounge/index.html
@@ -10,6 +10,7 @@
         <h1>
             Welcome to the Head First Lounge
         </h1>
+        <img src="Photos/drinks.gif">
         <p>
             Join us any evening for refreshing elixirs, conversation and maybe a game or two of <em>Dance Dance Revolution</em>. Wireless access is always provided; BYOWS (Bring your own web server).
         </p>
