--- a/HeadFirstLounge/Starbuzz.html
+++ b/HeadFirstLounge/Starbuzz.html
@@ -5,6 +5,16 @@
         <title>
             GSR Starbuzz homepage
         </title>
+        <style type="text/css">
+            body {
+                background-color: #d2b48c;
+                margin-left: 20%;
+                margin-right: 20%;
+                border: 2px dotted black;
+                padding: 10px 10px 10px 10px;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
         <h1>Starbuzz coffee beverages</h1>
