Fixed git i swear

--- a/HeadFirstLounge/Starbuzz.html
+++ b/HeadFirstLounge/Starbuzz.html
@@ -5,7 +5,7 @@
         <title>
             GSR Starbuzz homepage
         </title>
-        <style type="text/css">
+        <style>
             body {
                 background-color: #d2b48c;
                 margin-left: 20%;
