--- a/HeadFirstLounge/StarbuzzMission.html
+++ b/HeadFirstLounge/StarbuzzMission.html
@@ -5,6 +5,16 @@
         <title>
             GSR Starbuzz Coffee mission
         </title>
+        <style>
+            body {
+                background-color: #d2b48c;
+                margin-left: 20%;
+                margin-right: 20%;
+                border: 2px dotted black;
+                padding: 10px 10px 10px 10px;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
         <h1>Starbuzz Coffee's mission</h1>
