Detailed directions to head first lounge

--- a/HeadFirstLounge/index.html
+++ b/HeadFirstLounge/index.html
@@ -16,7 +16,7 @@
         </p>
         <h2>Directions</h2>
         <p>
-            You'll find us right in the center of downtown Webville. Come join us!
+            You'll find us right in the center of downtown Webville. If you need help finding us, check out our <a href="HeadFirstLoungeDirections.html">detailed direction.</a> Come join us!
         </p>
     </body>
 </html>
