--- a/HeadFirstLounge/index.html
+++ b/HeadFirstLounge/index.html
@@ -12,7 +12,7 @@
         </h1>
         <img src="Photos/drinks.gif">
         <p>
-            Join us any evening for refreshing elixirs, conversation and maybe a game or two of <em>Dance Dance Revolution</em>. Wireless access is always provided; BYOWS (Bring your own web server).
+            Join us any evening for refreshing <a href="Elixirs.html">elixirs</a>, conversation and maybe a game or two of <em>Dance Dance Revolution</em>. Wireless access is always provided; BYOWS (Bring your own web server).
         </p>
         <h2>Directions</h2>
         <p>
