Back to the lounge

--- a/HeadFirstLounge/Beverages/Elixirs.html
+++ b/HeadFirstLounge/Beverages/Elixirs.html
@@ -30,5 +30,6 @@
             <img src="Photos/red.jpg">
             Wake up to the flavors of cranberry and hibiscus in this vitamin C rich elixir.
         </p>
+        <p>Back to <a href="../index.html">The Lounge</a></p>
     </body>
 </html>
