--- a/HeadFirstLounge/About/HeadFirstLoungeDirections.html
+++ b/HeadFirstLounge/About/HeadFirstLoungeDirections.html
@@ -17,5 +17,6 @@
         <p>Turn right at Structure Ave N - go 0.7 mi</p>
         <p>Continue on Structure Ave S - go 0.2 mi</p>
         <p>Turn right at SW Presentation Way - go 0.0 mi</p>
+        <p>Back to <a href="../index.html">The Lounge</a></p>
     </body>
 </html>
