Javascript song miniproject

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
             <a href="EldenRing.html">here</a>
             because it didn't feel like homepage content
         </p>
+        <p>
+            The small JavaScript project is
+            <a href="HeadFirstLounge/JavascriptSong/index.html">here.</a>
+        </p>
     </body>
 </html>
