--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
             The small JavaScript project is
             <a href="HeadFirstLounge/JavascriptSong/index.html">here.</a>
         </p>
+        <p>
+            Webville tunes can be found 
+            <a href="HeadFirstLounge/WebvilleTunes/index.html">here.</a>
+        </p>
     </body>
 </html>
