Guessing game with is an answer check

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
             Grant Stafford-Renard's Homepage
         </h1>
         <p>
-            I moved the other content
-            <a href="EldenRing.html">here</a>
-            because it didn't feel like homepage content
+            A small webpage on the video game 
+            <a href="EldenRing.html">"Elden Ring."</a>
         </p>
         <p>
             The small JavaScript project is
@@ -22,6 +21,10 @@
         <p>
             Webville tunes can be found 
             <a href="HeadFirstLounge/WebvilleTunes/index.html">here.</a>
+        </p>
+        <p>
+            The guessing game is 
+            <a href="HeadFirstLounge/GuessGame/index.html">here.</a>
         </p>
     </body>
 </html>
