Conrad group work labs added

--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
             The guessing game is 
             <a href="HeadFirstLounge/GuessGame/index.html">here.</a>
         </p>
+        <p>
+            The CIW lesson 1-4 labs done with a classmate can be found
+            <a href="CIWLesson1-5LabsW:C/index.html">here.</a>
+        </p>
+        <p>
+            The CIW lesson 6 labs can be found on a page similar to this, in case it gets a bit messy. That can be found
+            <a href="CIWLesson6Labs/index.html">here.</a>
+        </p>
     </body>
 </html>
