Found lab 6-3, all non-optional labs done

--- a/CIWLesson6Labs/index.html
+++ b/CIWLesson6Labs/index.html
@@ -39,6 +39,7 @@
         <form name="diferentStringForms">
             <input type="button" value="La-Li-Lu-Le-Lo" onclick="patriotsFunction(1);">
             <input type="button" value="The Patriots" onclick="patriotsFunction(2);">
+            <input type="button" value="Take Javascript Test" onclick="jsTest();" />
         </form>
         <div style="text-align: center;">
             <hr>
