'optional' labs done but not personalized

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             <a href="HeadFirstLounge/GuessGame/index.html">here.</a>
         </p>
         <p>
-            The CIW lesson 1-4 labs done with a classmate can be found
-            <a href="CIWLesson1-5LabsW:C/index.html">here.</a>
+            The CIW lesson 1-4 labs didnt work when I tried to add them to this repo, its a work in progress.
         </p>
         <p>
             The CIW lesson 6 labs can be found on a page similar to this, in case it gets a bit messy. That can be found
