--- a/CIWLesson6Labs/index.html
+++ b/CIWLesson6Labs/index.html
@@ -54,5 +54,36 @@
                 Valid!
             </a>
         </div>
+        Vote for your favorite sport:
+        <form name="myform">
+            <input type="radio" name="sports" value="Football" />Football<br/>
+            <input type="radio" name="sports" value="Hockey" />Hockey<br/>
+            <input type="radio" name="sports" value="Auto Racing" />Auto Racing<br/>
+            <input type="radio" name="sports" value="MMA" />MMA<br/>
+            <input type="radio" name="sports" value="Basketball" />Basketball<br/>
+            <input type="radio" name="sports" value="Tennis" />Tennis<br/>
+            <input type="radio" name="sports" value="Golf" />Golf<br/>
+            <input type="radio" name="sports" value="Baseball" />Baseball<br/>
+            <input type="radio" name="sports" value="Soccer" />Soccer<br/>
+            <p><input type="button" value="VOTE" onclick="vote()" /> <input type="reset" value="RESET" /></p>
+            <p><input type="text" id="txt" size="40" onblur="upperCase()" /> Click in then out!</p>
+            <p><input type="text" id="txt1" size="40" onmouseover="SayHello()" /> Hover over this field!</p>
+            <p><input type="text" id="txt2" size="40" onmouseout="SayGoodbye()" /> Hover this field then away!</p>
+        </form>
+        <form name="radioExampleForm" method="get" action="" onsubmit="return false;">
+            <p>
+                <label for="number0"> <input type="radio" value="0" name="number" /> Zero</label>
+                &nbsp;<label for="number1"> <input type="radio" value="1" name="number" /> One</label> 
+                &nbsp;<label for="number2"> <input type="radio" value="2" name="number" /> Two</label> 
+                &nbsp;<label for="number3"> <input type="radio" value="3" name="number" /> Three</label> 
+                &nbsp;<label for="number4"> <input type="radio" value="4" name="number" /> Four</label>
+            </p>
+            <p>
+                <input type="button" onclick="alert('Checked value is: '+getCheckedValue(document.forms['radioExampleForm'].elements['number']));" value="Show Checked Value" />
+                &nbsp;<input type="button" onclick="setCheckedValue(document.forms['radioExampleForm'].elements['number'], '2');" value="Set Checked to Two" /> 
+                &nbsp;<input type="button" onclick="setCheckedValue(document.forms['radioExampleForm'].elements['number'], '4');" value="Set Checked to Four" /> 
+                &nbsp;<input type="button" onclick="setCheckedValue(document.forms['radioExampleForm'].elements['number'], '');" value="Uncheck All" />
+            </p>
+        </form>
     </body>
 </html>
