--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
             The CIW lesson 6 labs can be found on a page similar to this, in case it gets a bit messy. That can be found
             <a href="CIWLesson6Labs/index.html">here.</a>
         </p>
+        <p>
+            The CIW lesson 8 labs can be found
+            <a href="CIWLesson8Labs/index.html">here.</a>
+        </p>
     </body>
 </html>
