--- a/index.html
+++ b/index.html
@@ -37,5 +37,9 @@
             The CIW lesson 8 labs can be found
             <a href="CIWLesson8Labs/index.html">here.</a>
         </p>
+        <p>
+            The CIW lesson 9 labs can be found
+            <a href="CIWLesson9Labs/index.html">here.</a>
+        </p>
     </body>
 </html>
