applied new style to all pages except for spesific HeadFirstLounge pages that need more scrutiny

--- a/CIWLesson9Labs/OLab1/index.html
+++ b/CIWLesson9Labs/OLab1/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="uft-8">
+        <link rel="stylesheet" href="../../Style/stylesheet.css">
         <title>
             Optional Lab 1
         </title>
