--- a/HeadFirstLounge/Starbuzz.html
+++ b/HeadFirstLounge/Starbuzz.html
@@ -2,19 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="uft-8">
+        <link rel="stylesheet" href="../Style/stylesheet.css">
         <title>
             GSR Starbuzz homepage
         </title>
-        <style>
-            body {
-                background-color: #d2b48c;
-                margin-left: 20%;
-                margin-right: 20%;
-                border: 2px dotted black;
-                padding: 10px 10px 10px 10px;
-                font-family: sans-serif;
-            }
-        </style>
     </head>
     <body>
         <h1>Starbuzz coffee beverages</h1>
