--- a/CIWLesson9Labs/Lab2/index.html
+++ b/CIWLesson9Labs/Lab2/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="uft-8">
+        <link rel="stylesheet" href="../../Style/stylesheet.css">
         <title>
             Lab 2
         </title>
