--- a/CIWLesson9Labs/index.html
+++ b/CIWLesson9Labs/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="uft-8">
+        <link rel="stylesheet" href="../Style/stylesheet.css">
         <title>
             Lesson 9 labs
         </title>
