--- a/EldenRing.html
+++ b/EldenRing.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="uft-8">
+        <link rel="stylesheet" href="Style/stylesheet.css">
         <title>
             Grant Stafford-Renard's Page on Elden Ring
         </title>
