--- a/HeadFirstLounge/index.html
+++ b/HeadFirstLounge/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="uft-8">
+        <link rel="stylesheet" href="../Style/stylesheet.css">
         <title>
             GSR Head First Lounge homepage
         </title>
