Elden ring page improved

--- a/EldenRing.html
+++ b/EldenRing.html
@@ -12,9 +12,14 @@
             Grant Stafford-Renard's Page on Elden Ring
         </h1>
         <p>
-            <img src="Photos/elden_ring.webp" alt="Elden Ring"
-            width="1200"
-            height="900">
+            <style>
+                img{
+                    margin-left: 25%;
+                    width: 48%;
+                    height: 36%;
+                }
+            </style>
+            <img src="Photos/elden_ring.webp" alt="Elden_ring_art">
         </p>
         <h4>
             One of my favorite games
@@ -22,7 +27,7 @@
         <p>
             <b>Seriously</b>
         </p>
-        <table class="source" style="width: 1200px;">
+        <table class="source" style="width: 1200px;" id="Awards">
             <tbody>
                 <tr>
                     <td>
@@ -31,7 +36,7 @@
                                 <tr>
                                     <th colspan="2">Awards nominations and winnings</th>
                                 </tr>
-                                <tr>
+                                <tr id="Heading">
                                     <th>Award</th>
                                     <th>Status</th>
                                 </tr>
