Head First Lounge styled

--- a/HeadFirstLounge/GuessGame/index.html
+++ b/HeadFirstLounge/GuessGame/index.html
@@ -13,7 +13,7 @@
                 document.getElementById("vLink2").setAttribute("href", CSSvalidLinkStr);
             }
         </script>
-        <link rel="stylesheet" href="Stylesheet.css">
+        <link rel="stylesheet" href="../../Style/stylesheet.css">
     </head>
     <body>
         <h1>
