--- a/HeadFirstLounge/JavascriptSong/index.html
+++ b/HeadFirstLounge/JavascriptSong/index.html
@@ -3,24 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>100 cans of your choice</title>
-<style>
-@import url(style.css);
-@font-face {
-  font-family: "NerkoOne-Regular";
-  src: url(fonts/NerkoOne-Regular.ttf);
-}
-body {
-  font-family: 'NerkoOne-Regular', sans-serif;
-  color: #00171F;
-}
-h1 {
-  font-size: 3.5vw;
-}
-#song>p {
-  text-align: center;
-  font-size: 2.5vw;
-}
-</style>
+<link rel="stylesheet" href="../../Style/stylesheet.css">
 <script>
 function init() {
   var loc = window.location.href;
