--- a/HeadFirstLounge/WebvilleTunes/index.html
+++ b/HeadFirstLounge/WebvilleTunes/index.html
@@ -17,7 +17,7 @@
             window.onload = init;
         </script>
         <script src="playlist_store.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../../Style/stylesheet.css">
     </head>
     <body>
         <h1>
