--- a/HeadFirstLounge/index.html
+++ b/HeadFirstLounge/index.html
@@ -8,6 +8,13 @@
         </title>
     </head>
     <body>
+        <style>
+            img{
+                width: 51%;
+                height: 25%;
+                margin-left: 25%;
+            }
+        </style>
         <h1>
             Welcome to the new and improved Head First Lounge
         </h1>
