--- a/index.html
+++ b/index.html
@@ -42,5 +42,9 @@
             The CIW lesson 9 labs can be found
             <a href="CIWLesson9Labs/index.html">here.</a>
         </p>
+        <p>
+            The HeadFirst Lounge can be found
+            <a href="HeadFirstLounge/index.html">here.</a>
+        </p>
     </body>
 </html>
