--- a/HeadFirstLounge/About/HeadFirstLoungeDirections.html
+++ b/HeadFirstLounge/About/HeadFirstLoungeDirections.html
@@ -5,18 +5,21 @@
         <title>
             GSR Head First Lounge directions
         </title>
+        <link rel="stylesheet" href="../../Style/stylesheet.css">
     </head>
     <body>
         <h1>
             How to get to the Head First Lounge
         </h1>
-        <p>Take the 305 S exit to Webville - go 0.4 mi</p>
-        <p>Continue on 305 - go 12 mi</p>
-        <p>Turn right at Structure Ave N - go 0.7 mi</p>
-        <p>Turn right and head north toward Structure Ave N - go 0.0 mi</p>
-        <p>Turn right at Structure Ave N - go 0.7 mi</p>
-        <p>Continue on Structure Ave S - go 0.2 mi</p>
-        <p>Turn right at SW Presentation Way - go 0.0 mi</p>
+        <ol>
+            <li>Take the 305 S exit to Webville - go 0.4 mi</li>
+            <li>Continue on 305 - go 12 mi</li>
+            <li>Turn right at Structure Ave N - go 0.7 mi</li>
+            <li>Turn right and head north toward Structure Ave N - go 0.0 mi</li>
+            <li>Turn right at Structure Ave N - go 0.7 mi</li>
+            <li>Continue on Structure Ave S - go 0.2 mi</li>
+            <li>Turn right at SW Presentation Way - go 0.0 mi</li>
+        </ol>
         <p>Back to <a href="../index.html">The Lounge</a></p>
     </body>
 </html>
