--- a/HeadFirstLounge/Beverages/Elixirs.html
+++ b/HeadFirstLounge/Beverages/Elixirs.html
@@ -5,29 +5,36 @@
         <title>
             Head First Lounge elixirs
         </title>
+        <link rel="stylesheet" href="../../Style/stylesheet.css">
     </head>
     <body>
+        <style>
+            img{
+                width: 10%;
+                height: 20%;
+            }
+        </style>
         <h1>
             The elixir options at the Head First Lounge
         </h1>
         <h2>Green Tea Cooler</h2>
         <p>
-            <img src="Photos/green.jpg">
+            <img src="../Photos/green.jpg">
             Chock full of vitamins and minerals, this elixir combines the healthful benefits of green tea with a twist of chamomile blossoms and ginger root.
         </p>
         <h2>Rasberry Ice Concentration</h2>
         <p>
-            <img src="Photos/lightblue.jpg">
+            <img src="../Photos/lightblue.jpg">
             Combining rasberry juice with lemon grass, citrus peel and rosehips, this icy drink will make your mind feel clear and crisp.
         </p>
         <h2>Blueberry Bliss Elixir</h2>
         <p>
-            <img src="Photos/blue.jpg">
+            <img src="../Photos/blue.jpg">
             Blueberries and cherry essence mixed into a base of elderflower herb tea will put you in a relaxed stae of bliss in no time.
         </p>
         <h2>Cranberry Antioxidint Blast</h2>
         <p>
-            <img src="Photos/red.jpg">
+            <img src="../Photos/red.jpg">
             Wake up to the flavors of cranberry and hibiscus in this vitamin C rich elixir.
         </p>
         <p>Back to <a href="../index.html">The Lounge</a></p>
