--- a/CIWLesson8Labs/Index.html
+++ b/CIWLesson8Labs/Index.html
@@ -14,9 +14,16 @@
         <h2>
             Standard labs
         </h2>
-        <p href="Lab1/index.html">Lab 1</p>
-        <p href="Lab2/index.html">Lab 2</p>
-        <p href="Lab3/index.html">Lab 3</p>
-        <p href="Lab4/index.html">Lab 4</p>
+        <p>
+            <a href="Lab1/index.html">Lab 1.</a>
+        </p>
+        <p>
+            <a href="Lab2/index.html">Lab 2.</a>
+        </p>
+        <p>
+            <a href="Lab3/index.html">Lab 3.</a>
+        </p><p>
+            <a href="Lab4/index.html">Lab 4.</a>
+        </p>
     </body>
 </html>
