--- a/CIWLesson9Labs/index.html
+++ b/CIWLesson9Labs/index.html
@@ -14,15 +14,15 @@
         <h2>
             Standard labs
         </h2>
-        <p href="Lab1/index.html">Lab 1</p>
-        <p href="Lab2/index.html">Lab 2</p>
-        <p href="Lab3/index.html">Lab 3</p>
-        <p href="Lab4/index.html">Lab 4</p>
-        <p href="Lab5/index.html">Lab 5</p>
-        <p href="Lab6/index.html">Lab 6</p>
+        <p><a href="Lab1/index.html">Lab 1</a></p>
+        <p><a href="Lab2/index.html">Lab 2</a></p>
+        <p><a href="Lab3/index.html">Lab 3</a></p>
+        <p><a href="Lab4/index.html">Lab 4</a></p>
+        <p><a href="Lab5/index.html">Lab 5</a></p>
+        <p><a href="Lab6/index.html">Lab 6</a></p>
         <h2>
             "Optional" labs
         </h2>
-        <p href="OLab1/index.html">Optional lab 1</p>
+        <p><a href="OLab1/index.html">Lab 1</a></p>
     </body>
 </html>
